Changelog for Six
-----------------

This file lists the changes in each six version.


Development version
-------------------

- Expose an API for adding mappings to six.moves.


1.0 beta 1
----------

- Reworked six into one .py file.  This breaks imports.  Please tell me if you
  are interested in an import compatibility layer.